--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Actions\Action.cs" />
+     <Compile Include="Assets\Scripts\Actions\GropeSelf.cs" />
      <Compile Include="Assets\Scripts\ActorBehavior.cs" />
      <Compile Include="Assets\Scripts\ActorInfoDrawer.cs" />
  <Reference Include="UnityEngine.UI">
