--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -50,6 +50,8 @@
      <Compile Include="Assets\Scripts\Actions\GropeSelf.cs" />
      <Compile Include="Assets\Scripts\ActorBehavior.cs" />
      <Compile Include="Assets\Scripts\ActorInfoDrawer.cs" />
+     <Compile Include="Assets\Scripts\ActorMotor.cs" />
+     <Compile Include="Assets\Scripts\PlayerController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
