Added a new abstract class: SexAction.  It extends Action.  Most sexual actions, like licking vagina, sucking cock, groping breasts, etc. have similar function: they stimulate/arouse the user by a certain amount, they stimulate/arouse the target by a certain amount, and they have a duration. In order to simplify adding new sexual actions like this, I have implemented all that basic functionality in the SexAction class.  Any action that is going to have the aforementioned functionality should extend the SexAction class.  An example SexAction called "LickVagina" has been implemented.
HOW TO USE SexAction
1. Create a class and have it extend SexAction
2. Override the OnActionStart() method
3. In the OnActionStart() method, you may set the following variables:
	*duration 			(how long the action lasts)
	*totalTargetStimulus 			(How much stimulus should be given to the
				target by the time the action is over)
	*totalTargetArousal			(How much arousal should be given to the
				 target by the time the action is over)
	*totalOwnerStimulus			(Same as above, but for the owner instead)
	*totalOwnerArousal			(Same as above, but for the owner instead)
4. Done

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Actions\Action.cs" />
      <Compile Include="Assets\Scripts\Actions\GropeSelf.cs" />
+     <Compile Include="Assets\Scripts\Actions\LickVagina.cs" />
+     <Compile Include="Assets\Scripts\Actions\SexAction.cs" />
      <Compile Include="Assets\Scripts\ActorBehavior.cs" />
      <Compile Include="Assets\Scripts\ActorInfoDrawer.cs" />
      <Compile Include="Assets\Scripts\ActorMotor.cs" />
